# chip8-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
.github/workflows/: check.yml  clippy.yml  coverage.yml  release.yml  test.yml
chip8/: Cargo.toml
chip8-rs/: Cargo.toml
chip8-rs-micro/: Cargo.toml
chip8-rs/shaders/: shader.wgsl
chip8-rs/src/: data.rs  lib.rs  main.rs  renderer.rs
chip8/src/: controls.rs  cpu.rs  data.rs  display.rs  gpu.rs  keyboard.rs  lib.rs  memory.rs  registers.rs  system.rs  timer.rs
libchip8/: Cargo.toml
res/: index.html
res/scripts/: SetVersion.ps1
src/: audio.rs  cpu.rs  data.rs  gpu.rs  lib.rs  main.rs  memory.rs  registers.rs  renderer.rs  stack.rs
