[package]
name = "chip8"
description = "Chip-8 Interpreter"
authors = ["Michael Rivnak <rivnakm1@gmail.com>"]
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.4.11", features = ["derive"] }
log = "0.4.17"
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["time"] }
winit = { version = "0.29.7", features = ["rwh_05"]}
wgpu = { version = "0.18.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35.1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
tracing-wasm = "0.2.1"
wgpu = { version = "0.18.0", features = ["webgl"] }
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
web-sys = { version = "0.3.50", features = ["Document", "Window", "Element"] }
