[package]
name = "chip8-rs"
description = "Chip 8 Emulator written in Rust"
authors = ["Mike Rivnak <rivnakm1@gmail.com>"]
version = "0.0.0"
edition = "2021"
rust-version = "1.62.1"

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
env_logger = "0.10.0"
libchip8 = { path = "../libchip8" }
wgpu = "0.15.1"
winit = "0.28.3"
